    * FIX: esx_vsphere_datastores: Fix incomplete performance data and Perf-O-Meter
    * FIX: cleaned up fileinfo.groups pattern handling, manual configuration
      is now possible using WATO
    * ADD: etherbox: new check for etherbox (messpc) sensors.
           currently supported: temperature, humidity, switch contact and smoke sensors


    Notifications:
    * notify.py: Matching service level: Use the hosts service level if a
                 service has no service level set
    * notify.py: fixed bug with local notification spooling
    * HTML notifications: Now adding optional links to host- and service names
      when second argument notification script is configured to the base url of the
      monitoring installation (e.g. http://<host>/<site>/ in case of OMD setups)
    * HTML notifications: Added time of state change

    Multisite:
    * User accounts can now be locked after a specified amount of auth
      failures (lock_on_logon_failures can be set to a number of tries)
    * Column Perf-O-Meter is now sortable: it sorts after the *first*
      performance value. This might not always be the one you like, but
      its far better than nothing.
    * logwatch: Logwatch icon no longer uses notes_url
    * check_mk-if.pnp: fixed bug with pnp template on esx hosts without perfdata
    * Inventory screen: Host inventory also displays its clustered services
    * Rules: Renamed "Ignored services" to "Disabled services"
             Renamed "Ignored checks" to "Disabled checks"
    * Sorter Host IP address: fixed sorting, no longer uses str compare on ip
    * Views: New: Draw rule editor icon in multisite views (default off)
             Can be activated in global settings
    * New global multisite options: Adhoc downtime with duration and comment
                                    Display current date in dashboard
    * LDAP: Using asynchronous searches / added optional support for paginated
      searches (Can be enabled in connection settings)