@@ -29,10 +29,9 @@
 
 def inventory_cisco_wlc_clients(info):
     if len(info) > 0:
-        return [ ('Summary', (None, None) ) ] + [ (x[0], (None, None)) for x in info ]
+        return [ ('Summary', None ) ] + [ (x[0], None) for x in info ]
 
 def check_cisco_wlc_clients(item, params, info):
-    warn, crit = params
     state = 0
     found = False
     for line in info:
@@ -51,11 +50,18 @@ def check_cisco_wlc_clients(item, params, info):
             break
 
     if found:
-        if crit and num_of_clients > crit:
-            state = 2
-        elif warn and num_of_clients > warn:
-            state = 1
-        perf = [ ("clients", num_of_clients, warn, crit ) ]
+        if params:
+            crit_low, warn_low, warn_high, crit_high = params
+            if num_of_clients < crit_low:
+                state = 2
+            elif num_of_clients < warn_low:
+                state = 1
+            elif num_of_clients > crit_high:
+                state = 2
+            elif num_of_clients > warn_high:
+                state = 1
+
+        perf = [ ("clients", num_of_clients, None, None) ]
         return state, "%d connections (%s)" % (num_of_clients, interface), perf
 
     return 3, "WiFi not found"
@@ -64,6 +70,7 @@ check_info["cisco_wlc_clients"] = {
     "check_function"        : check_cisco_wlc_clients,
     "inventory_function"    : inventory_cisco_wlc_clients,
     "service_description"   : "Clients",
+    "group"                 : "wlc_clients",
     "has_perfdata"          : True,
     "snmp_scan_function"    : lambda oid: oid('.1.3.6.1.2.1.1.2.0') in [".1.3.6.1.4.1.9.1.1069"],
     "snmp_info"             : ( ".1.3.6.1.4.1.14179.2.1.1.1",  [ 2, 42, 38 ]),
